# j2me-emulator

./: .gitignore  BLACK_SCREEN_FIX_COMPLETE.md  BLACK_SCREEN_FIX_SUMMARY.md  CANVAS_PAINT_BREAKTHROUGH.md  CANVAS_PAINT_SIMPLIFICATION.md  CHINESE_ENCODING_FIX.md  CMakeLists.txt  COMPILATION_FIX_SUMMARY.md  CURRENT_GAME_STATUS.md  CURRENT_STATUS_SUMMARY.md  FINAL_DIAGNOSIS.md  FINAL_STATUS_SUMMARY.md  FONT_SYSTEM_IMPLEMENTATION.md  IMPROVEMENT_PLAN.md  INTERACTIVE_TEST_INSTRUCTIONS.md  JAR_INTEGRATION_SUMMARY.md  MAIN_PROGRAM_INTEGRATION_PLAN.md  MIDP_COMPLETION_PLAN.md  PHASE10_OBJECT_CREATION_SUCCESS.md  PHASE11_CANVAS_REFERENCE_ISSUE.md  PHASE12_CANVAS_REFERENCE_FIXED.md  PHASE13_CLASS_HIERARCHY_IMPLEMENTATION.md  PHASE14_INTERPRETER_BUGS_FIXED.md  PHASE15_METHOD_INVOCATION_FIXED.md  PHASE16_INTERPRETER_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_HEAP_SUCCESS.md  PHASE2_CANVAS_PROGRESS.md  PHASE2_HEAP_INTEGRATION_COMPLETE.md  PHASE2_INTEGRATION_SUCCESS.md  PHASE2_MIDP_API_COMPLETION.md  PHASE2_PROGRESS.md  PHASE2_RENDERING_STATUS.md  PHASE2_START_SUMMARY.md  PHASE3_PROGRESS.md  PHASE3_SDL_INTEGRATION.md  PHASE4_CANVAS_IMPLEMENTATION.md  PHASE4_CANVAS_PROGRESS_SUMMARY.md  PHASE4_FINAL_STATUS.md  PHASE4_JAR_REAL_GAME_STATUS.md  (+20 more)
docs/: api_reference.md  architecture.md  build_guide.md  development_roadmap.md
examples/: advanced_graphics_test.c  black_screen_fix_test.c  canvas_texture_test.c  chinese_encoding_test.c  chinese_font_test.c  complete_game_test.c  enhanced_test.c  exception_only_test.c  filesystem_test.c  font_system_test.c  gc_test.c  graphics_integration_test.c  graphics_test.c  heap_test.c  hello_world_test.c  image_processing_test.c  input_event_test.c  interactive_render_test.c  jar_test.c  method_invocation_test.c  midlet_executor_test.c  midp_api_enhanced_test.c  midp_api_test.c  midp_native_test.c  midp_test.c  network_test.c  optimized_interpreter_test.c  phase4_test.c  phase5_test.c  real_game_test.c  real_jar_test.c  sdl_direct_test.c  sdl_integration_test.c  simple_canvas_test.c  simple_java_test.c  simple_method_test.c  simple_midp_test.c  simple_test.c
include/: j2me_audio.h  j2me_bytecode.h  j2me_class.h  j2me_constant_pool.h  j2me_exception.h  j2me_field_access.h  j2me_filesystem.h  j2me_gc.h  j2me_graphics.h  j2me_heap.h  j2me_input.h  j2me_interpreter.h  j2me_interpreter_optimized.h  j2me_jar.h  j2me_log.h  j2me_method_invocation.h  j2me_midlet_executor.h  j2me_midp_graphics.h  j2me_native_methods.h  j2me_network.h  j2me_object.h  j2me_string.h  j2me_types.h  j2me_vm.h
src/: main.c
src/audio/: j2me_audio.c
src/core/: j2me_class_loader.c  j2me_class_parser.c  j2me_constant_pool.c  j2me_exception.c  j2me_field_access.c  j2me_gc.c  j2me_heap.c  j2me_log.c  j2me_method_invocation.c  j2me_midlet_executor.c  j2me_native_java.c  j2me_native_methods.c  j2me_native_midp.c  j2me_native_reflect.c  j2me_native_thread.c  j2me_native_types.c  j2me_object.c  j2me_string.c  j2me_vm.c
src/filesystem/: j2me_filesystem.c
src/graphics/: j2me_graphics.c  j2me_midp_graphics.c
src/interpreter/: j2me_bytecode.c  j2me_interpreter.c  j2me_interpreter_optimized.c
src/jar/: j2me_jar.c
src/network/: j2me_network.c
src/platform/: j2me_input.c
test_programs/: CanvasTest.java  SimpleCanvas.java  SimpleCanvasTest.java  SimpleTest.java
test_simple/: SimpleMIDlet.java  SimpleTest.java  build.sh  build_simple.sh
test_simple/stubs/java/io/: IOException.java  OutputStream.java  PrintStream.java
test_simple/stubs/java/lang/: ArithmeticException.java  ArrayIndexOutOfBoundsException.java  ArrayStoreException.java  CharSequence.java  Class.java  ClassCastException.java  ClassNotFoundException.java  Double.java  Error.java  Exception.java  Float.java  IndexOutOfBoundsException.java  Integer.java  Long.java  Math.java  NegativeArraySizeException.java  NullPointerException.java  Number.java  Object.java  OutOfMemoryError.java  ReflectiveOperationException.java  Runtime.java  RuntimeException.java  StackOverflowError.java  StackTraceElement.java  String.java  StringBuilder.java  System.java  Thread.java  Throwable.java  UnsupportedOperationException.java  VirtualMachineError.java
test_simple/stubs/javax/microedition/lcdui/: Canvas.java  Display.java  Displayable.java  Graphics.java  Image.java
test_simple/stubs/javax/microedition/midlet/: MIDlet.java
